--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,14 +1,32 @@
-<%- include('includes/head'); %>
+<%- include('includes/head') %> <%- include('includes/nav') %>
 
-<section class="container">
-  <h1><%= csrfToken %></h1>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-2"></div>
 
-  <form action="/" method="post">
-    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-    <label>Cliente</label>
-    <input type="text" name="cliente">
-    <button>Submit</button>
-  </form>
-</section>
+        <div class="col-lg-8 my-3">
+            <h1 class="text-center">Agenda</h1>
+            <p class="text-center lead">Seus contatos estão abaixo!</p>
 
-<%- include('includes/footer'); %>
+            <div class="row">
+                <div class="col my-3">
+                    <div class="alert alert-danger">Um erro qualquer</div>
+                </div>
+            </div>
+            <div class="responsive-table">
+                <table class="table my-3">
+                    <tr>
+                        <td>Luiz</td>
+                        <td>Otávio</td>
+                        <td>2199999999</td>
+                        <td>otaviomiranda@gmail.com</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+
+        <div class="col-lg-2"></div>
+    </div>
+</div>
+
+<%- include('includes/footer') %>
