--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -8,6 +8,8 @@
             <h1 class="text-center">Criar conta ou entrar</h1>
             <p class="text-center lead">Faça login ou crie sua conta abaixo</p>
 
+            <%- include('includes/messages'); %>
+
             <div class="row">
                 <div class="col-lg">
                     <h4>Faça seu cadastro</h4>
