--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Agenda</a>
+    <a class="navbar-brand" href="/">Agenda</a>
     <button
         class="navbar-toggler"
         type="button"
