--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -7,8 +7,8 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
 
-        <li class="nav-item">
-        <a class="nav-link" href="/contato/index">Cadastrar contato</a>
+      <li class="nav-item">
+        <a class="nav-link" href="/contato/">Cadastrar contato</a>
       </li>
 
       <% if (user) { %>
@@ -22,10 +22,6 @@
 
       <%}%>
 
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            
         </ul>
     </div>
 </nav>
