--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -10,26 +10,31 @@
       <p class="text-center lead">Crie ou edite seu contato abaixo.</p>
 
       <%- include('includes/messages') %>
-
-      <form action="/contato/register" method="POST">
+      <% if(contato._id) { %>
+      <form action="/contato/edit/<%=contato._id%>" method="POST">
+        <%} else  {%>
+        <form action="/contato/register" method="POST">
+          <%}%>
+      
         <input type="hidden" name="_csrf" value=<%= csrfToken %>>
-        <div class="form-group">
-          <label>Nome</label>
-          <input value="<%= contato.nome %>" type="text" class="form-control" name="nome">
-        </div>
-        <div class="form-group">
-          <label>Sobrenome</label>
-          <input value="<%= contato.sobrenome %>" type="text" class="form-control" name="sobrenome">
-        </div>
-        <div class="form-group">
-          <label>Email</label>
-          <input value="<%= contato.email %>" type="email" class="form-control" name="email">
-        </div>
-        <div class="form-group">
-          <label>Telefone</label>
-          <input value="<%= contato.telefone %>" type="tel" class="form-control" name="telefone">
-        </div>
-        <button type="submit" class="btn btn-primary">Salvar</button>
+          <div class="form-group">
+            <label>Nome</label>
+            <input value="<%= contato.nome %>" type="text" class="form-control" name="nome">
+          </div>
+          <div class="form-group">
+            <label>Sobrenome</label>
+            <input value="<%= contato.sobrenome %>" type="text" class="form-control" name="sobrenome">
+          </div>
+          <div class="form-group">
+            <label>Email</label>
+            <input value="<%= contato.email %>" type="email" class="form-control" name="email">
+          </div>
+          <div class="form-group">
+            <label>Telefone</label>
+            <input value="<%= contato.telefone %>" type="tel" class="form-control" name="telefone">
+          </div>
+          <button type="submit" class="btn btn-primary">Salvar</button>
+        </form>
       </form>
 
 
