Listando e apagando contatos (Read e Delete) + Validação de telefone no back-end

--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -13,7 +13,7 @@
 
       <% if (user) { %>
       <li class="nav-item">
-        <a class="nav-link" href="/login/logout">Sair</a>
+        <a class="nav-link" id="logout-link" href="/login/logout">Sair</a>
       </li>
       <% } else { %>
       <li class="nav-item">
