--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,29 +1,37 @@
 <%- include('includes/head') %> <%- include('includes/nav') %>
 
 <div class="container">
-    <div class="row">
-        <div class="col-lg-2"></div>
+  <div class="row">
+    <div class="col-lg-2"></div>
 
-        <div class="col-lg-8 my-3">
-            <h1 class="text-center">Agenda</h1>
-            <p class="text-center lead">Seus contatos estão abaixo!</p>
+    <div class="col-lg-8 my-3">
+      <h1 class="text-center">Agenda</h1>
+      <p class="text-center lead">Seus contatos estão abaixo!</p>
 
-            <%- include('includes/messages') %>
+      <%- include('includes/messages') %>
+      <% if(contatos.length > 0) {%>
+      <div class="responsive-table">
+        <table class="table my-3">
+          <% contatos.forEach(contato => { %>
+          <tr>
+            <td><%=contato.nome%></td>
+            <td><%=contato.sobrenome%></td>
+            <td><%=contato.telefone%></td>
+            <td><%=contato.email%></td>
+            <td><a href="/contato/<%= contato._id %>">Editar</a></td>
+            <td><a class="text-danger" href="/contato/delete/<%= contato._id %>">Excluir</a></td>
+          </tr>
+          <%});%>
 
-            <div class="responsive-table">
-                <table class="table my-3">
-                    <tr>
-                        <td>Luiz</td>
-                        <td>Otávio</td>
-                        <td>2199999999</td>
-                        <td>otaviomiranda@gmail.com</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-
-        <div class="col-lg-2"></div>
+        </table>
+      </div>
+      <%} else {%>
+      <p class="text-center lead">Não existem contatos na sua agenda.</p>
+      <% } %>
     </div>
+
+    <div class="col-lg-2"></div>
+  </div>
 </div>
 
 <%- include('includes/footer') %>
