--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -16,7 +16,7 @@
             crossorigin="anonymous"
         />
         
-        <title>Hello, world!</title>
+        <title>Agenda</title>
     </head>
     <body>
 </html>
